--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.11",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -20,6 +21,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "theme-change": "^2.5.0",
+    "typescript": "5.2.2",
+    "viem": "^1.12.1",
+    "wagmi": "^1.4.2"
+  },
+  "devDependencies": {
+    "daisyui": "^3.7.5"
   }
 }
